# pyseccomp

./: .isort.cfg  Pipfile  README.md  pyseccomp.py  setup.cfg
.github/workflows/: ci.yml
scripts/: check.sh  format.sh
tests/: test_ffi.py  test_filter_load.py  test_filter_manipulate.py  test_misc.py  test_notification.py  util.py
