[metadata]
name = pyseccomp
version = attr: pyseccomp.__version__
url = https://github.com/cptpcrd/pyseccomp
description = An interface to libseccomp using ctypes. API compatible with libseccomp's Python bindings.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = seccomp, libseccomp
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6

# vim: ts=4 expandtab
